# name: test_create[uvloop-None]
  <class 'dict'> {
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'id': 'abc123',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': '',
  }
---
# name: test_create[uvloop-None].1
  <class 'dict'> {
    '_id': 'abc123',
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'invalidate_sessions': False,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': '',
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: test_edit[uvloop-None-data0]
  <class 'dict'> {
    'administrator': False,
    'force_reset': True,
    'groups': <class 'list'> [
      'tech',
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'tech',
  }
---
# name: test_edit[uvloop-None-data1]
  <class 'dict'> {
    'administrator': False,
    'force_reset': True,
    'groups': <class 'list'> [
      'tech',
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
  }
---
# name: test_edit[uvloop-None-data2]
  <class 'dict'> {
    'administrator': False,
    'force_reset': True,
    'groups': <class 'list'> [
      'tech',
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'tech',
  }
---
# name: test_edit[uvloop-None-data3]
  <class 'dict'> {
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      'tech',
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'tech',
  }
---
# name: test_edit[uvloop-None-data4]
  <class 'dict'> {
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      'tech',
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
  }
---
# name: test_edit[uvloop-None-data5]
  <class 'dict'> {
    'administrator': False,
    'force_reset': True,
    'groups': <class 'list'> [
      'tech',
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
  }
---
# name: test_edit[uvloop-None-data6]
  <class 'dict'> {
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      'tech',
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'tech',
  }
---
# name: test_edit[uvloop-group_dne-data1]
  <class 'dict'> {
    'administrator': False,
    'force_reset': True,
    'groups': <class 'list'> [
      'tech',
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
  }
---
# name: test_edit[uvloop-group_dne-data4]
  <class 'dict'> {
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      'tech',
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
  }
---
# name: test_edit[uvloop-group_dne-data5]
  <class 'dict'> {
    'administrator': False,
    'force_reset': True,
    'groups': <class 'list'> [
      'tech',
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
  }
---
# name: test_edit[uvloop-not_group_member-data1]
  <class 'dict'> {
    'administrator': False,
    'force_reset': True,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
  }
---
# name: test_edit[uvloop-not_group_member-data4]
  <class 'dict'> {
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
  }
---
# name: test_edit[uvloop-not_group_member-data5]
  <class 'dict'> {
    'administrator': False,
    'force_reset': True,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'id': 'bob',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
  }
---
# name: test_find[uvloop]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'baz',
        'id': 'bar',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': 'technician',
      },
      <class 'dict'> {
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'bar',
        'id': 'foo',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': 'technician',
      },
      <class 'dict'> {
        'administrator': True,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'bob',
        'id': 'test',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': True,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': 'technician',
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'baz',
    'id': 'bar',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': 'technician',
  }
---
